# LinkUp

./: .env  .gitignore  ABOUT.md  APP_STORE_DESCRIPTION.md  BIOMETRIC_AUTH.md  CHANGELOG.md  CONTRIBUTING.md  Clarinet.toml  FEED_REFACTORING_COMPLETE.md  FEED_REFACTOR_SUMMARY.md  I18N_IMPLEMENTATION.md  INSTALL_CLOUDINARY.sh  LAUNCH_PLAN.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PRESS_RELEASE.md  README.md  RECOVERY_PHRASE_IMPLEMENTATION.md  REFACTORING_PLAN.md  SCREEN_REFACTORING_COMPLETE.md  SECURITY.md  SECURITY_FEATURES_SUMMARY.md  TWO_FACTOR_AUTH.md  VISION.md  app.json  global.css  google-services.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
app/: _layout.tsx  explore.tsx  index.tsx  mini-apps.tsx  payment-success.tsx
components/: PusherStatus.tsx
deployments/: default.mainnet-plan.yaml
hooks/: useAuth.ts  useBlockHeight.ts  useChatCount.ts  useChats.ts  useClipboard.ts  useComments.ts  useContractAllowance.ts  useContractStats.ts  useGaiaChat.ts  useGaiaProfile.ts  useImagePicker.ts  useLanguage.ts  useMessages.ts  useNotifications.ts  useOnChainPosts.ts  useOnboarding.ts  usePayments.ts  usePostOnChain.ts  usePosts.ts  usePusherStatus.ts  useResponsive.ts  useSeekerBalance.ts  useStacksExplorer.ts  useStxBalance.ts  useStxPrice.ts  useSwapHistory.ts  useTokenPrice.ts  useTransactionStatus.ts  useWallet.ts
lib/: api.ts  biometric.ts  constants.ts  deeplink.ts  format.ts  gaia.ts  i18n.ts  solana-config.ts.bak  stacks-address.ts  stacks-config.ts  (+8 more)
programs/ika-helper/: Cargo.toml
programs/ika-helper/src/: main.rs
programs/solapp-privacy/programs/solapp-privacy/: Cargo.toml
programs/solapp-privacy/programs/solapp-privacy/src/: lib.rs
(+240 files in other folders)
