[package]
name = "ika-dwallet-helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ika-dwallet-helper"
path = "src/main.rs"

[dependencies]
ika-grpc          = { git = "https://github.com/dwallet-labs/ika-pre-alpha" }
ika-dwallet-types = { git = "https://github.com/dwallet-labs/ika-pre-alpha" }
tokio             = { version = "1", features = ["rt-multi-thread", "macros"] }
bcs               = "0.1"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
clap              = { version = "4", features = ["derive"] }
bs58              = "0.5"
rand              = "0.8"
base64            = "0.21"
ed25519-dalek     = "1"
anyhow            = "1"
